<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signIn"
        android:text="@string/sign_in"
        android:textColor="#000000"
        android:textSize="40sp"
        android:layout_above="@+id/username"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawableTint="#000000"
        android:hint="@string/username"
        android:textColorHint="#000000"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="32sp"
        android:autofillHints="Enter Username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginBtn"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:autofillHints="Enter Password"
        android:textColor="#000000"
        android:drawableTint="#000000"
        android:textColorHint="#000000"
        android:textSize="32sp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginBtn"
        android:text="@string/login"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPass"
        android:layout_below="@id/loginBtn"
        android:text="@string/forgot_password"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_above="@id/others"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/others"
        android:layout_above="@id/socialIcons"
        android:text="@string/or_sign_in_with"
        android:textSize="22sp"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/socialIcons"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_google_black_24"
            android:contentDescription="@string/google_icon" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_facebook_black_24"
            android:contentDescription="@string/facebook_icon" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_twitterx_black_24"
            android:contentDescription="@string/x_icon" />
    </LinearLayout>
</RelativeLayout>
